# fhiragent

./: Dockerfile  config.toml  demo.txt  fhir_summarizer_goal.json  hello_world.py  main.py  medical-terminologies-mcp-1.0.2.tgz  pyproject.toml  search.http  testcases.txt
.ai-agent/: config.toml
.ai-agent/tools/: test_tool.py
.tmp-medterm/package/: LICENSE  README.md  package.json
Desktop/: dummy_script.py
agent/: agent.py  events.py  session.py
client/: llm_client.py  response.py
clinical/: fhir_bundle_processor.py
config/: config.py  loader.py
context/: compaction.py  manager.py
prompts/: system.py
safety/: approval.py
tools/: base.py  discovery.py  subagents.py
tools/builtin/: __init__.py  edit_file.py  fhir_everything.py  fhir_read.py  fhir_search.bak  fhir_search.py  fhir_update.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  registry.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
tools/mcp/: client.py  mcp_manager.py  mcp_tool.py
ui/: tui.py
utils/: errors.py  paths.py  text.py
utils/codes/: loinc.py  rxnorm.py  snomed.py
