[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "black>=26.1.0",
    "click>=8.3.1",
    "ddgs>=9.11.2",
    "dotenv>=0.9.9",
    "fastmcp>=3.1.1",
    "fhir-resources>=8.2.0",
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "platformdirs>=4.9.2",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "tomli>=2.4.0",
]
